[gd_scene load_steps=12 format=3 uid="uid://dqe164qwwxqu6"]

[ext_resource type="Script" uid="uid://bb0lqgsh8ig4u" path="res://src/entities/beehive/beehive.gd" id="1_bx1nu"]
[ext_resource type="Texture2D" uid="uid://but5boxkwti52" path="res://assets/art/misc/beehive_idle,w8,h8,s3.png" id="2_q6s0l"]
[ext_resource type="Texture2D" uid="uid://dwcel8gv3drsc" path="res://assets/art/misc/beehive_shoot,w8,h8,s3.png" id="3_q6s0l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fnv10"]
atlas = ExtResource("2_q6s0l")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghlq4"]
atlas = ExtResource("2_q6s0l")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4urr"]
atlas = ExtResource("2_q6s0l")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoaw1"]
atlas = ExtResource("3_q6s0l")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpnor"]
atlas = ExtResource("3_q6s0l")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_mick4"]
atlas = ExtResource("3_q6s0l")
region = Rect2(16, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_lv0q6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnv10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghlq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4urr")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoaw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpnor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mick4")
}],
"loop": false,
"name": &"shoot",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17vyv"]
size = Vector2(6, 8)

[node name="Beehive" type="Area2D" groups=["projectile_targets", "vfx_targets"]]
collision_layer = 8
collision_mask = 16
script = ExtResource("1_bx1nu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lv0q6")
animation = &"shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_17vyv")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
